All content added and styled, responsive design incomplete

--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+
     <h1>Discover hidden places in the world around you</h1>
+
     <a href="..." class="download-link">Download Excursion (Coming Soon!)</a>
-   
+
+    <video autoplay muted>
+        <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4?_gl=1*6cqovc*_ga*NDU4NzQ5MzcxMy4xNzA1NTAyMTE5*_ga_3LRZM6TM9L*MTcwNzM5NDE2Ni4yOS4wLjE3MDczOTQxNjYuMC4wLjA." type="video/mp4">
+    </video>
+    
+    <h2>Your personal travel guide</h2>
+    <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+
+    <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg?_gl=1*1pr7vfg*_ga*NDU4NzQ5MzcxMy4xNzA1NTAyMTE5*_ga_3LRZM6TM9L*MTcwNzM5NDE2Ni4yOS4wLjE3MDczOTQxNjYuMC4wLjA." />
+
+    <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png?_gl=1*83adk3*_ga*NDU4NzQ5MzcxMy4xNzA1NTAyMTE5*_ga_3LRZM6TM9L*MTcwNzM5NDE2Ni4yOS4wLjE3MDczOTQxNjYuMC4wLjA." />
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <a href="..." class="download-link">Download Excursion (Coming Soon!)</a>
+
 </body>
+
+<footer>
+    <h4><i class="fa fa-regular fa-copyright"></i> Excursion</h4>
+</footer>
 </html>
